Paginas e Cadastro com Banco de Dados

--- a/gaby.html
+++ b/gaby.html
@@ -6,31 +6,17 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     <script src="main.js"></script>
-    <style>
-*{
-    padding: 0;
-    margin: 0;
-}
-.menu{
-    width: 100%;
-    height: 80px;
-    background: #00cec9;
-}
-iframe{
-    width: 100%;
-    padding: 10px;
-}
-    
-
-    </style>
+    <script src="visivel.js"></script>
 </head>
-<body>  
+<body> 
+
     <div class="menu">
-      <div id="conteudo" >
-                <input type="checkbox" id="check">
-                <label id="icone" for="check"> <img src="icone.png" ></label>
-                  <div class="barra">
+    <div id="conteudo" >
+            <input type="checkbox" id="check">
+            <label id="icone" for="check"> <img src="icone.png" ></label>
+                    <div class="barra">
                       <nav>
                           <a href=""><div class="link"><i class="fas fa-home"></i>Home</div></a>
                           <a href=""><div class="link"><i class="fas fa-home"></i>Login/Cadastro</div></a>
@@ -40,12 +26,82 @@ iframe{
                           <a href=""><div class="link"><i class="fas fa-align-justify"></i>Parques Ecosustentaveis</div></a>
                           <a href=""><div class="link"><i class="fas fa-bell"></i>Sair</div></a>
                       </nav>
-                  </div>
-                   </div>
+                    </div>
     </div>
-    <h2></h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d3693.6213040387693!2d-54.81712242444207!3d-22.216493576136532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x9489a9b7684203c7%3A0x1083d2a5688f8a52!2sR.+Ant%C3%B4nio+de+Carvalho%2C+1548-1602+-+Vila+Planalto%2C+Dourados+-+MS%2C+79826-030!3m2!1d-22.2131851!2d-54.8112174!5e0!3m2!1spt-BR!2sbr!4v1541787970963" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
 
-   
-</body>
-</html>
+    <div class="Home"   style="display: none">
+            <h2>Sobre Nós</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sequi saepe modi eveniet ipsum! Distinctio, enim quasi. Nostrum aut aliquam, ipsam, doloremque, et eaque laborum nihil hic consequuntur quae dolore!</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sequi saepe modi eveniet ipsum! Distinctio, enim quasi. Nostrum aut aliquam, ipsam, doloremque, et eaque laborum nihil hic consequuntur quae dolore!</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sequi saepe modi eveniet ipsum! Distinctio, enim quasi. Nostrum aut aliquam, ipsam, doloremque, et eaque laborum nihil hic consequuntur quae dolore!</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sequi saepe modi eveniet ipsum! Distinctio, enim quasi. Nostrum aut aliquam, ipsam, doloremque, et eaque laborum nihil hic consequuntur quae dolore!</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sequi saepe modi eveniet ipsum! Distinctio, enim quasi. Nostrum aut aliquam, ipsam, doloremque, et eaque laborum nihil hic consequuntur quae dolore!</p>
+            <h2>O que São Lixos Eletrônicos?</h2>        
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sequi saepe modi eveniet ipsum! Distinctio, enim quasi. Nostrum aut aliquam, ipsam, doloremque, et eaque laborum nihil hic consequuntur quae dolore!</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sequi saepe modi eveniet ipsum! Distinctio, enim quasi. Nostrum aut aliquam, ipsam, doloremque, et eaque laborum nihil hic consequuntur quae dolore!</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sequi saepe modi eveniet ipsum! Distinctio, enim quasi. Nostrum aut aliquam, ipsam, doloremque, et eaque laborum nihil hic consequuntur quae dolore!</p>
+            <h2>Principais Danos ao Meio Ambiente</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sequi saepe modi eveniet ipsum! Distinctio, enim quasi. Nostrum aut aliquam, ipsam, doloremque, et eaque laborum nihil hic consequuntur quae dolore!</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sequi saepe modi eveniet ipsum! Distinctio, enim quasi. Nostrum aut aliquam, ipsam, doloremque, et eaque laborum nihil hic consequuntur quae dolore!</p>
+            <h2>Como Previnir?</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sequi saepe modi eveniet ipsum! Distinctio, enim quasi. Nostrum aut aliquam, ipsam, doloremque, et eaque laborum nihil hic consequuntur quae dolore!</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sequi saepe modi eveniet ipsum! Distinctio, enim quasi. Nostrum aut aliquam, ipsam, doloremque, et eaque laborum nihil hic consequuntur quae dolore!</p>
+            <h2>Reutilizar!</h2>       
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sequi saepe modi eveniet ipsum! Distinctio, enim quasi. Nostrum aut aliquam, ipsam, doloremque, et eaque laborum nihil hic consequuntur quae dolore!</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sequi saepe modi eveniet ipsum! Distinctio, enim quasi. Nostrum aut aliquam, ipsam, doloremque, et eaque laborum nihil hic consequuntur quae dolore!</p>
+    </div>
+
+    <div class="bt_login/cadastro" style="display: inline">
+        <div class="login" >
+            <form>
+                <h3>Login</h3>
+                    <input type="email" id="login_email" placeholder=" Email">
+                    <input type="password"  id="login_senha1" placeholder=" Senha">
+                    <button id="bt_entrar" onclick="login()">Entrar</button>
+            </form>
+    </div>
+        <div class="cadastro" >
+            <form>
+                <h3>Cadastro</h3>
+                    <input type="text" id="nome_cadastro" placeholder=" Nome">
+                    <input type="email" id="email_cadastro" placeholder=" Email">
+                    <input type="number" id="cpf_cadastro" placeholder=" CPF">
+                    <input type="password" id="senha1_cadastro" placeholder=" Insira a Senha">
+                    <input type="password" id="senha2_cadastro" placeholder=" Repita a Senha">
+                    <button id="bt_cadastrar" onclick=" CadastroUsuario()">Cadastrar</button>
+            </form>
+    </div>
+        <div class="termos_uso">
+            <input type="checkbox"  id="termo_uso"><p>Ao Clicar em Cadastrar estará concordando com os <a href="#">Termos de Uso</a> .</p>
+        </div>
+    </div>
+
+    <div class="empresas" style="display: none">
+         <h2>Principais Empresas Coletoras</h2>
+            <h3>1. Embrapa</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum suscipit vitae, illum impedit rem aut voluptatibus soluta maiores aspernatur eum? Sapiente modi quasi officia ea quis similique unde iste eaque.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam hic neque molestias voluptatum provident! Soluta incidunt tempore nam, cumque quas voluptatibus blanditiis deleniti quo saepe excepturi corporis. Doloribus, at eveniet!</p>
+            <h3>2. Lojas Americanas</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum suscipit vitae, illum impedit rem aut voluptatibus soluta maiores aspernatur eum? Sapiente modi quasi officia ea quis similique unde iste eaque.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam hic neque molestias voluptatum provident! Soluta incidunt tempore nam, cumque quas voluptatibus blanditiis deleniti quo saepe excepturi corporis. Doloribus, at eveniet!</p>
+            <h3>3. EcoVale</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum suscipit vitae, illum impedit rem aut voluptatibus soluta maiores aspernatur eum? Sapiente modi quasi officia ea quis similique unde iste eaque.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam hic neque molestias voluptatum provident! Soluta incidunt tempore nam, cumque quas voluptatibus blanditiis deleniti quo saepe excepturi corporis. Doloribus, at eveniet!</p>
+            <h3>4. EletronicTrash</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum suscipit vitae, illum impedit rem aut voluptatibus soluta maiores aspernatur eum? Sapiente modi quasi officia ea quis similique unde iste eaque.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam hic neque molestias voluptatum provident! Soluta incidunt tempore nam, cumque quas voluptatibus blanditiis deleniti quo saepe excepturi corporis. Doloribus, at eveniet!</p> 
+    </div>     
+    <div class="pontos_de_coleta">
+
+    </div>
+
+    <div class="mapa" style="display:none">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d3693.6213040387693!2d-54.81712242444207!3d-22.216493576136532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x9489a9b7684203c7%3A0x1083d2a5688f8a52!2sR.+Ant%C3%B4nio+de+Carvalho%2C+1548-1602+-+Vila+Planalto%2C+Dourados+-+MS%2C+79826-030!3m2!1d-22.2131851!2d-54.8112174!5e0!3m2!1spt-BR!2sbr!4v1541787970963" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+
+    <div class="parques_eco">
+
+    </div>
+        </body>
+        </html>
