--- a/gaby.html
+++ b/gaby.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>LIFE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
@@ -18,19 +18,19 @@
             <label id="icone" for="check"> <img src="icone.png" ></label>
                     <div class="barra">
                       <nav>
-                          <a href=""><div class="link"><i class="fas fa-home"></i>Home</div></a>
-                          <a href=""><div class="link"><i class="fas fa-home"></i>Login/Cadastro</div></a>
-                          <a href=""><div class="link"><i class="fas fa-phone"></i>Empresas</div></a>
-                          <a href=""><div class="link"><i class="fas fa-address-book"></i>Pontos de Coleta</div></a>
-                          <a href=""><div class="link"><i class="fas fa-map-marker-alt"></i>Mapa</div></a>
-                          <a href=""><div class="link"><i class="fas fa-align-justify"></i>Parques Ecosustentaveis</div></a>
+                          <a onclick="Home()"><div class="link"><i class="fas fa-home"></i>Home</div></a>
+                          <a onclick="Login_Cadastro()"><div class="link"><i class="fas fa-home"></i>Login/Cadastro</div></a>
+                          <a onclick="Empresas()"><div class="link"><i class="fas fa-phone"></i>Empresas</div></a>
+                          <a onclick="Pontos_de_coleta()"><div class="link"><i class="fas fa-address-book"></i>Pontos de Coleta</div></a>
+                          <a onclick=" Mapa()"><div class="link"><i class="fas fa-map-marker-alt"></i>Mapa</div></a>
+                          <a onclick=" Parques_Eco()"><div class="link"><i class="fas fa-align-justify"></i>Parques Ecosustentaveis</div></a>
                           <a href=""><div class="link"><i class="fas fa-bell"></i>Sair</div></a>
                       </nav>
                     </div>
     </div>
     </div>
 
-    <div class="Home"   style="display: none">
+    <div class="Home">
             <h2>Sobre Nós</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sequi saepe modi eveniet ipsum! Distinctio, enim quasi. Nostrum aut aliquam, ipsam, doloremque, et eaque laborum nihil hic consequuntur quae dolore!</p>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sequi saepe modi eveniet ipsum! Distinctio, enim quasi. Nostrum aut aliquam, ipsam, doloremque, et eaque laborum nihil hic consequuntur quae dolore!</p>
@@ -52,7 +52,7 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sequi saepe modi eveniet ipsum! Distinctio, enim quasi. Nostrum aut aliquam, ipsam, doloremque, et eaque laborum nihil hic consequuntur quae dolore!</p>
     </div>
 
-    <div class="bt_login/cadastro" style="display: inline">
+    <div class="login_cadastro">
         <div class="login" >
             <form>
                 <h3>Login</h3>
@@ -77,7 +77,7 @@
         </div>
     </div>
 
-    <div class="empresas" style="display: none">
+    <div class="empresas">
          <h2>Principais Empresas Coletoras</h2>
             <h3>1. Embrapa</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum suscipit vitae, illum impedit rem aut voluptatibus soluta maiores aspernatur eum? Sapiente modi quasi officia ea quis similique unde iste eaque.</p>
@@ -96,7 +96,7 @@
 
     </div>
 
-    <div class="mapa" style="display:none">
+    <div class="mapa">
             <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d3693.6213040387693!2d-54.81712242444207!3d-22.216493576136532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x9489a9b7684203c7%3A0x1083d2a5688f8a52!2sR.+Ant%C3%B4nio+de+Carvalho%2C+1548-1602+-+Vila+Planalto%2C+Dourados+-+MS%2C+79826-030!3m2!1d-22.2131851!2d-54.8112174!5e0!3m2!1spt-BR!2sbr!4v1541787970963" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 
