--- a/gaby.html
+++ b/gaby.html
@@ -13,9 +13,11 @@
 <body> 
 
     <div class="menu">
+             
+            <img src="energy.png" id="logo"> <h1>LIFE</h1>
     <div id="conteudo" >
             <input type="checkbox" id="check">
-            <label id="icone" for="check"> <img src="icone.png" ></label>
+            <label id="icone" for="check"> <img id="icone" src="icone.png" ></label>
                     <div class="barra">
                       <nav>
                           <a onclick="Home()"><div class="link"><i class="fas fa-home"></i>Home</div></a>
@@ -29,7 +31,7 @@
                     </div>
     </div>
     </div>
-
+                <img src="" >
     <div class="Home">
             <h2>Sobre Nós</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sequi saepe modi eveniet ipsum! Distinctio, enim quasi. Nostrum aut aliquam, ipsam, doloremque, et eaque laborum nihil hic consequuntur quae dolore!</p>
